final fix overflow for all the devices

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  overflow-x: hidden;
+}
 
 body {
-  overflow-x: hidden;
+ overflow-x: hidden;
   color: white;
-  width: 100dvw;
+  width: 100vw;
   overflow-x: hidden;
   height: 100%;
   background: #000;
